[HWORKS-2879] Port Hops-specific Hive changes from branch-3.0.0.14 to hops-4.1.0 (#108)
* Port Hops-specific Hive changes from branch-3.0.0.14 to hops-4.1.0

This commit ports all Hops/HopsFS customizations from the Hive 3.x Hops branch
(branch-3.0.0.14) to Apache Hive 4.1.0, and applies all necessary compatibility
fixes to make the project compile against HopsFS (io.hops groupId).

Original source branch: branch-3.0.0.14
Key source commits cherry-picked/adapted from:
  - e0111a7498 HOPSFS-342: Build with hops hadoop 3.4.3.0-EE-RC0
  - d2a209c706 Merge pull request #76 from smkniazi/HOPSFS-342
  - c06aa6510f HOPSFS-342: Added HopsFS EE and Hive EE repos (#83) (#84)
  - 33dfa6e460 HOPSFS-342: Release hive 3.0.0.14
  - 2a66ae929b [HWORKS-2819] Bump HopsFS and Hive version (#105)

============================================================
NEW FILES (ported from branch-3.0.0.14)
============================================================

hops-jdbc/ (entire module)
  - New JDBC driver module for HopsFS-backed HiveServer2
  - HiveConnection: two-way SSL / hopsTLS session open, Kerberos Subject
    handling updated to Hive 4.x Optional<Subject> pattern
  - HiveStatement: migrated from InPlaceUpdateStream.NO_OP sentinel to
    Optional<InPlaceUpdateStream> (Hive 4.x API)
  - HttpKerberosRequestInterceptor: changed boolean assumeSubject to
    Subject loggedInSubject (Hive 4.x API)
  - hops-jdbc/pom.xml: added hive-jdbc compile dependency (for
    org.apache.hive.jdbc.logs.InPlaceUpdateStream)

service/src/java/org/apache/hive/service/auth/TSSLBasedProcessor.java
  - Custom Thrift processor that extracts the username from the CN of
    the client X.509 certificate (hopsTLS mutual auth)

service/src/java/org/apache/hive/service/auth/HopsAuthenticationProviderImpl.java
  - PasswdAuthenticationProvider stub for hopsTLS sessions where
    authentication is done at TLS handshake time

common/src/java/org/apache/hadoop/hive/common/auth/HopsTLSTSocketFactory.java
common/src/jav